Add NOAA charts and link to station page

--- a/index.html
+++ b/index.html
@@ -91,6 +91,46 @@
             border-radius: 8px;
             margin: 1rem 0;
         }
+
+        .chart-container {
+            margin-top: 2rem;
+        }
+
+        .chart-wrapper {
+            background: white;
+            padding: 1rem;
+            border-radius: 8px;
+            margin: 1rem 0;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+        }
+
+        .chart-wrapper h3 {
+            margin: 0 0 1rem 0;
+            color: #003366;
+        }
+
+        .chart-img {
+            width: 100%;
+            max-width: 100%;
+            height: auto;
+            display: block;
+        }
+
+        .noaa-link {
+            display: block;
+            text-align: center;
+            margin: 2rem 0;
+            padding: 1rem;
+            background: #003366;
+            color: white;
+            text-decoration: none;
+            border-radius: 8px;
+            transition: background-color 0.2s;
+        }
+
+        .noaa-link:hover {
+            background: #004480;
+        }
     </style>
 </head>
 <body>
@@ -106,6 +146,41 @@
                 <div class="loading">Loading wind conditions...</div>
             </div>
             <div id="lastUpdated" class="last-updated"></div>
+
+            <div class="chart-container">
+                <div class="chart-wrapper">
+                    <h3>Wind Speed and Direction (Last 24 Hours)</h3>
+                    <img 
+                        class="chart-img" 
+                        src="https://tidesandcurrents.noaa.gov/api/datagetter?product=wind&application=web_services&units=english&time_zone=lst&format=plot&interval=h&begin_date=today&range=24&station=8530973"
+                        alt="Wind speed and direction chart"
+                    />
+                </div>
+
+                <div class="chart-wrapper">
+                    <h3>Air Temperature (Last 24 Hours)</h3>
+                    <img 
+                        class="chart-img" 
+                        src="https://tidesandcurrents.noaa.gov/api/datagetter?product=air_temperature&application=web_services&units=english&time_zone=lst&format=plot&interval=h&begin_date=today&range=24&station=8530973"
+                        alt="Air temperature chart"
+                    />
+                </div>
+
+                <div class="chart-wrapper">
+                    <h3>Barometric Pressure (Last 24 Hours)</h3>
+                    <img 
+                        class="chart-img" 
+                        src="https://tidesandcurrents.noaa.gov/api/datagetter?product=air_pressure&application=web_services&units=english&time_zone=lst&format=plot&interval=h&begin_date=today&range=24&station=8530973"
+                        alt="Barometric pressure chart"
+                    />
+                </div>
+
+                <a href="https://tidesandcurrents.noaa.gov/stationhome.html?id=8530973" 
+                   target="_blank" 
+                   class="noaa-link">
+                    View Live Data at NOAA Station Page →
+                </a>
+            </div>
         </div>
     </main>
 
