removed charts, change to 24H, add last low tide, add clack prediction

--- a/index.html
+++ b/index.html
@@ -143,41 +143,16 @@
             <div id="tideLastUpdated" class="last-updated"></div>
         </div>
 
-        <div class="chart-container">
-            <div class="chart-wrapper">
-                <h3>Wind Speed and Direction (Last 24 Hours)</h3>
-                <img 
-                    id="windChart"
-                    class="chart-img" 
-                    src="" 
-                    alt="Wind speed and direction chart"
-                />
-            </div>
-
-            <div class="chart-wrapper">
-                <h3>Air Temperature (Last 24 Hours)</h3>
-                <img 
-                    id="tempChart"
-                    class="chart-img" 
-                    src="" 
-                    alt="Air temperature chart"
-                />
-            </div>
-
-            <div class="chart-wrapper">
-                <h3>Barometric Pressure (Last 24 Hours)</h3>
-                <img 
-                    id="pressureChart"
-                    class="chart-img" 
-                    src="" 
-                    alt="Barometric pressure chart"
-                />
-            </div>
-
+        <div class="noaa-links">
             <a href="https://tidesandcurrents.noaa.gov/stationhome.html?id=8530973" 
                target="_blank" 
                class="noaa-link">
-                View Live Data at NOAA Station Page →
+                View Wind Data at NOAA →
+            </a>
+            <a href="https://tidesandcurrents.noaa.gov/stationhome.html?id=8518750" 
+               target="_blank" 
+               class="noaa-link">
+                View Tide Data at NOAA →
             </a>
         </div>
     </main>
