Fix v1 for 24H, display low and slack tide

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <main class="main-content">
         <div class="conditions-card">
-            <h2>Current Wind Conditions</h2>
+            <h2>Current Wind Conditions at Robbins Reef</h2>
             <div id="windData" class="wind-data">
                 <div class="loading">Loading wind conditions...</div>
             </div>
