--- a/index.html
+++ b/index.html
@@ -68,6 +68,46 @@
             color: #333;
         }
 
+        .windy-container {
+            position: relative;
+            width: 100%;
+            height: 500px;
+            margin-top: 1rem;
+            border-radius: 8px;
+            overflow: hidden;
+        }
+
+        .windy-container iframe {
+            border: none;
+            border-radius: 8px;
+            display: none;
+        }
+
+        .windy-container iframe.active {
+            display: block;
+        }
+
+        .forecast-tabs {
+            display: flex;
+            gap: 1rem;
+            margin-bottom: 1rem;
+        }
+
+        .forecast-tab {
+            padding: 0.5rem 1rem;
+            background: #f0f8ff;
+            border: 2px solid #003366;
+            border-radius: 4px;
+            color: #003366;
+            cursor: pointer;
+            font-weight: 500;
+        }
+
+        .forecast-tab.active {
+            background: #003366;
+            color: white;
+        }
+
         .tide-time {
             color: #003366;
             font-weight: 500;
@@ -86,6 +126,13 @@
             color: #dc2626;
             padding: 1rem;
             border-radius: 8px;
+            margin: 1rem 0;
+        }
+
+        .chart-container {
+            position: relative;
+            height: 300px;
+            width: 100%;
             margin: 1rem 0;
         }
 
@@ -141,6 +188,31 @@
                 Loading tide information...
             </div>
             <div id="tideLastUpdated" class="last-updated"></div>
+        </div>
+
+        <div class="conditions-card">
+            <h2>Wind Forecast</h2>
+            <div class="forecast-tabs">
+                <button class="forecast-tab active" onclick="switchForecast('nam')">NAM</button>
+                <button class="forecast-tab" onclick="switchForecast('hrrr')">HRRR</button>
+            </div>
+            <div class="windy-container">
+                <iframe 
+                    id="nam-forecast"
+                    class="active"
+                    width="100%" 
+                    height="500" 
+                    src="https://embed.windy.com/embed2.html?lat=40.6553&lon=-74.0634&zoom=11&level=surface&overlay=wind&product=nam&menu=&message=&marker=&calendar=now&pressure=&type=map&location=coordinates&detail=&metricWind=default&metricTemp=default&radarRange=-1" 
+                    frameborder="0">
+                </iframe>
+                <iframe 
+                    id="hrrr-forecast"
+                    width="100%" 
+                    height="500" 
+                    src="https://embed.windy.com/embed2.html?lat=40.6553&lon=-74.0634&zoom=11&level=surface&overlay=wind&product=hrrr&menu=&message=&marker=&calendar=now&pressure=&type=map&location=coordinates&detail=&metricWind=default&metricTemp=default&radarRange=-1" 
+                    frameborder="0">
+                </iframe>
+            </div>
         </div>
 
         <div class="noaa-links">
@@ -280,13 +352,27 @@
             ]);
 
             // Schedule next update with slight random offset (0-2 minutes)
-            const randomOffset = Math.floor(Math.random() * 2 * 60 * 1000); // Random milliseconds up to 2 minutes
+            const randomOffset = Math.floor(Math.random() * 2 * 60 * 1000);
             const fiveMinutes = 5 * 60 * 1000;
             setTimeout(updateAllData, fiveMinutes + randomOffset);
         }
 
         // Initial load
         updateAllData();
+
+        function switchForecast(model) {
+            // Update tab styling
+            document.querySelectorAll('.forecast-tab').forEach(tab => {
+                tab.classList.remove('active');
+            });
+            document.querySelector(`.forecast-tab[onclick*="${model}"]`).classList.add('active');
+
+            // Update iframe visibility
+            document.querySelectorAll('.windy-container iframe').forEach(iframe => {
+                iframe.classList.remove('active');
+            });
+            document.getElementById(`${model}-forecast`).classList.add('active');
+        }
 
         // Remove individual intervals
         // setInterval(fetchWindData, 5 * 60 * 1000);
