--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <iframe 
                     width="100%" 
                     height="400" 
-                    src="https://embed.windy.com/embed2.html?lat=40.6553&lon=-74.0634&zoom=11&level=surface&overlay=wind&product=ecmwf&menu=&message=&marker=&calendar=now&pressure=&type=forecast&location=coordinates&detail=&metricWind=default&metricTemp=default&radarRange=-1" 
+                    src="https://embed.windy.com/embed2.html?lat=40.6553&lon=-74.0634&detailLat=40.6553&detailLon=-74.0634&zoom=11&level=surface&overlay=wind&product=ecmwf&menu=&message=true&marker=true&calendar=now&pressure=&type=forecast&location=coordinates&detail=true&metricWind=kt&metricTemp=default&radarRange=-1" 
                     frameborder="0">
                 </iframe>
             </div>
