--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         .forecast-detail-container {
             position: relative;
             width: 100%;
-            height: 400px;
+            height: 180px;  /* Reduced from 400px to show only the forecast table */
             margin: 1rem 0;
             border-radius: 8px;
             overflow: hidden;
@@ -242,7 +242,7 @@
             <div class="forecast-detail-container">
                 <iframe 
                     width="100%" 
-                    height="400" 
+                    height="180" 
                     src="https://embed.windy.com/embed2.html?lat=40.6553&lon=-74.0634&detailLat=40.6553&detailLon=-74.0634&zoom=11&level=surface&overlay=wind&product=ecmwf&menu=&message=true&marker=true&calendar=now&pressure=&type=forecast&location=coordinates&detail=true&metricWind=kt&metricTemp=default&radarRange=-1" 
                     frameborder="0">
                 </iframe>
