--- a/index.html
+++ b/index.html
@@ -250,6 +250,18 @@
         </div>
         </div>
 
+        <div class="conditions-card">
+        <h2>Weather Radar</h2>
+        <div class="radar-container">
+            <iframe 
+                width="100%" 
+                height="500"
+                src="https://www.accuweather.com/en/us/brooklyn/11210/weather-radar/334651" 
+                frameborder="0">
+            </iframe>
+        </div>
+    </div>
+
         <div class="noaa-links">
             <a href="https://tidesandcurrents.noaa.gov/stationhome.html?id=8530973" 
                target="_blank" 
