--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         .forecast-detail-container {
             position: relative;
             width: 100%;
-            height: 180px;  /* Reduced from 400px to show only the forecast table */
+            height: 200px;  /* Reduced from 400px to show only the forecast table */
             margin: 1rem 0;
             border-radius: 8px;
             overflow: hidden;
@@ -150,6 +150,22 @@
             margin: 1rem 0;
         }
 
+ .radar-container {
+        position: relative;
+        width: 100%;
+        height: 500px;
+        margin-top: 1rem;
+        border-radius: 8px;
+        overflow: hidden;
+    }
+
+    .radar-container iframe {
+        border: none;
+        border-radius: 8px;
+        width: 100%;
+        height: 100%;
+    }
+       
         .noaa-links {
             display: flex;
             flex-direction: column;
