--- a/index.html
+++ b/index.html
@@ -389,11 +389,12 @@
                 const nextTides = futureTides.slice(0, 2);
 
 
+
                 const tideInfo = [
-                    lastHigh ? `Last <strong>high</strong> tide was at <span class="tide-time">${formatTime(lastHigh.t)}</span> (${lastHigh.v.toFixed(1)} ft)` : null,
-                    lastLow ? `Last <strong>low</strong> tide was at <span class="tide-time">${formatTime(lastLow.t)}</span> (${lastLow.v.toFixed(1)} ft)` : null,
+                    lastHigh ? `Last <strong>high</strong> tide was at <span class="tide-time">${formatTime(lastHigh.t)}</span> (${lastHigh.v ? lastHigh.v.toFixed(1) : 'N/A'} ft)` : null,
+                    lastLow ? `Last <strong>low</strong> tide was at <span class="tide-time">${formatTime(lastLow.t)}</span> (${lastLow.v ? lastLow.v.toFixed(1) : 'N/A'} ft)` : null,
                     ...nextTides.map(tide => 
-                        `Next <strong>${tide.type === 'H' ? 'high' : 'low'}</strong> tide is at <span class="tide-time">${formatTime(tide.t)}</span> (${tide.v.toFixed(1)} ft)`
+                        `Next <strong>${tide.type === 'H' ? 'high' : 'low'}</strong> tide is at <span class="tide-time">${formatTime(tide.t)}</span> (${tide.v ? tide.v.toFixed(1) : 'N/A'} ft)`
                     )
                 ].filter(Boolean).join(';<br>');
 
