--- a/index.html
+++ b/index.html
@@ -315,52 +315,52 @@
             return `${days[date.getDay()]}, ${months[date.getMonth()]} ${date.getDate()} at ${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`;
         }
 
-        async function fetchWindData() {
-            try {
-                const response = await fetch(
-                    `https://api.tidesandcurrents.noaa.gov/api/prod/datagetter?` +
-                    `station=${STATION_ID}&product=wind&units=english&time_zone=lst_ldt&format=json&date=latest`
-                );
-                const data = await response.json();
+async function fetchWindData() {
+    try {
+        const response = await fetch(
+            `https://api.tidesandcurrents.noaa.gov/api/prod/datagetter?` +
+            `station=${STATION_ID}&product=wind&units=english&time_zone=lst_ldt&format=json&date=latest`
+        );
+        const data = await response.json();
 
-                if (data.error) {
-                    throw new Error(data.error.message);
-                }
-
-                const latest = data.data[0];
-                const windSpeed = parseFloat(latest.s);
-                const windDir = parseInt(latest.d);
-                const windGust = parseFloat(latest.g);
-                const timestamp = new Date(latest.t);
-
-                const windDataHtml = `
-                    <div class="wind-section">
-                        <span class="wind-label">Current:</span>
-                        <span class="wind-value">${windSpeed}</span>
-                        <span class="wind-label">knots</span>
-                    </div>
-                    <div class="wind-section">
-                        <span class="wind-label">Gusting:</span>
-                        <span class="wind-value">${windGust}</span>
-                        <span class="wind-label">knots</span>
-                    </div>
-                    <div class="wind-section">
-                        <span class="wind-label">Direction:</span>
-                        <span class="wind-value">${getWindDirection(windDir)}</span>
-                        <span class="wind-label">(${windDir}°)</span>
-                    </div>
-                `;
-
-                document.getElementById('windData').innerHTML = windDataHtml;
-                document.getElementById('lastUpdated').textContent = 
-                    `Last updated: ${formatTime(timestamp)}`;
-
-            } catch (error) {
-                document.getElementById('windData').innerHTML = `
-                    <div class="error">Error loading wind data: ${error.message}</div>`;
-                console.error('Error fetching wind data:', error);
-            }
+        if (data.error) {
+            throw new Error(data.error.message);
         }
+
+        const latest = data.data[0];
+        const windSpeed = parseFloat(latest.s);
+        const windDir = parseInt(latest.d);
+        const windGust = parseFloat(latest.g);
+        const timestamp = new Date(latest.t);
+
+        const windDataHtml = `
+            <div class="wind-section">
+                <span class="wind-label">Current:</span>
+                <span class="wind-value">${windSpeed}</span>
+                <span class="wind-label">knots</span>
+            </div>
+            <div class="wind-section">
+                <span class="wind-label">Gusting:</span>
+                <span class="wind-value">${windGust}</span>
+                <span class="wind-label">knots</span>
+            </div>
+            <div class="wind-section">
+                <span class="wind-label">Direction:</span>
+                <span class="wind-value">${getWindDirection(windDir)}</span>
+                <span class="wind-label">(${windDir}°)</span>
+            </div>
+        `;
+
+        document.getElementById('windData').innerHTML = windDataHtml;
+        document.getElementById('lastUpdated').textContent = 
+            `Last updated: ${formatTime(timestamp)}`;
+
+    } catch (error) {
+        document.getElementById('windData').innerHTML = `
+            <div class="error">Error loading wind data: ${error.message}</div>`;
+        console.error('Error fetching wind data:', error);
+    }
+}
 
         async function fetchTideData() {
     try {
@@ -390,16 +390,24 @@
 
         let tideInfo = '';
 
-        if (lastHigh) {
+        if (lastHigh && typeof lastHigh.v === 'number') {
             tideInfo += `Last <strong>high</strong> tide was at <span class="tide-time">${formatTime(lastHigh.t)}</span> (${lastHigh.v.toFixed(1)} ft);<br>`;
+        } else {
+            tideInfo += `Last <strong>high</strong> tide was at <span class="tide-time">${formatTime(lastHigh?.t)}</span>;<br>`;
         }
 
-        if (lastLow) {
+        if (lastLow && typeof lastLow.v === 'number') {
             tideInfo += `Last <strong>low</strong> tide was at <span class="tide-time">${formatTime(lastLow.t)}</span> (${lastLow.v.toFixed(1)} ft);<br>`;
+        } else {
+            tideInfo += `Last <strong>low</strong> tide was at <span class="tide-time">${formatTime(lastLow?.t)}</span>;<br>`;
         }
 
         for (const tide of nextTides) {
-            tideInfo += `Next <strong>${tide.type === 'H' ? 'high' : 'low'}</strong> tide is at <span class="tide-time">${formatTime(tide.t)}</span> (${tide.v.toFixed(1)} ft);<br>`;
+            if (typeof tide.v === 'number') {
+                tideInfo += `Next <strong>${tide.type === 'H' ? 'high' : 'low'}</strong> tide is at <span class="tide-time">${formatTime(tide.t)}</span> (${tide.v.toFixed(1)} ft);<br>`;
+            } else {
+                tideInfo += `Next <strong>${tide.type === 'H' ? 'high' : 'low'}</strong> tide is at <span class="tide-time">${formatTime(tide.t)}</span>;<br>`;
+            }
         }
 
         document.getElementById('tideInfo').innerHTML = tideInfo;
